24-02-16 | 박검지 | 회원가입 유효성 검사 진행 중

--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -49,6 +49,10 @@
 /*>>>>>>>>>>>>>>>>>>>>>>>>>> [우] >>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
 
 /* History - ai cokcok swiper */
+.my-history-wrap-parent{
+	max-height: 300px;
+}
+
 .my-history-wrap{
     letter-spacing: -1.3px;
 }
