--- a/src/main/resources/templates/thymeleaf/mypage/mypage.html
+++ b/src/main/resources/templates/thymeleaf/mypage/mypage.html
@@ -1,22 +1,7 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>mypage</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/nav.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/mypage.css">
-    <link rel="stylesheet" href="../css/swiper.css">
 
-    <!-- fontawesome icon -->
-    <script src="https://kit.fontawesome.com/ebccd8f794.js" crossorigin="anonymous"></script>
-    <!-- swiper -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-</head>
+<div th:replace="~{head/head::head}"></div>
 <body>
 <div th:replace="~{nav/nav::nav}"></div>
 <div id="mypage" class="container mt-5 px-0">
@@ -348,8 +333,8 @@
     </div>
 </div>
 </div><!--container-->
-	<!--footer-->
-	<div th:replace="footer/footer::footer"></div>
+<!--footer-->
+<div th:replace="~{footer/footer::footer}"></div>
 	
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
