--- a/src/main/resources/templates/thymeleaf/Member/FindPw.html
+++ b/src/main/resources/templates/thymeleaf/Member/FindPw.html
@@ -4,45 +4,65 @@
 <div th:replace="~{head/head::head}"></div>
 
 <body>
-<div th:replace="~{nav/nav::nav}"></div>
+	<div th:replace="~{nav/nav::nav}"></div>
 	<!-- addMember 페이지 -->
 	<div class="container addMember_wrap">
 		<div class="row my-5">
-			<div class="col-md-5 mx-auto my-5">
-				<div class="row g-3 addMember_form p-4 rounded shadow">
-					<h1>비밀번호 찾기</h1>
-					<div class="form-group">
-						<label for="id" class="form-label">아이디</label> <input type="text"
-							class="form-control" id="id" name="id">
-					</div>
-					<div class="col-12">
-						<label for="name" class="form-label">이름</label> <input type="text"
-							class="form-control" id="name" name="name">
-					</div>
-					<div class="col-12">
-						<label for="email" class="form-label">이메일</label> <input
-							type="text" class="form-control" id="email" name="email">
-					</div>
-
-
-					<div class="col-12 mt-4 text-center">
-						<button type="submit" class="btn btn-main w-100 ">비밀번호
-							찾기</button>
-						<div class="row mt-2">
-							<div class="col my-3">
-								<a href="addMember" class="text-decoration-none">회원 가입 </a> | <a
-									href="FindId" class="text-decoration-none text-dark">아이디 찾기</a>
-
+			<form action="/FindPwAction" method="post">
+				<div class="col-md-8 col-lg-7 col-xl-5 mx-auto my-5">
+					<div class="row g-3 addMember_form p-4 rounded-5 shadow-sm my-5 px-5">
+						<h3>비밀번호 찾기</h3>
+						<div class="col-12">
+							<div class="form-floating">
+								<input type="text" class="form-control" id="id" name="Member_Id">
+								<label for="id" class="form-label">아이디</label>
 							</div>
 						</div>
-
+						<div class="col-12">
+							<div class="form-floating">
+							<input type="text"
+								class="form-control" id="name" name="Member_Name">
+							<label for="name" class="form-label">이름</label> 
+							</div>
+						</div>
+						<div class="col-12">
+							<div class="form-floating">
+								<input
+									type="text" class="form-control" id="email" name="Member_Email">
+								<label for="email" class="form-label">이메일</label> 
+							</div>
+						</div>
+						<!-- 회원가입 / 아이디 찾기 -->	
+						<div class="col-12 mt-4 text-center">
+							<button type="submit" class="btn btn-main w-100 p-3 rounded-4">비밀번호 찾기</button>
+							<div class="row mt-2">
+								<div class="col my-3 d-flex justify-content-around">
+									<a href="addMember" class="text-decoration-none">회원 가입 </a> | <a
+										href="FindId" class="text-decoration-none text-dark">아이디 찾기</a>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
-			</div>
+			</form>
 		</div>
 	</div>
-<div th:replace="~{footer/footer::footer}"></div>
-	
+	<div th:replace="~{footer/footer::footer}"></div>
+	<!-- 알림창 -->
+	<script type="text/javascript">
+        $(document).ready(function() {
+            // URL에서 msg 매개변수 가져오기
+            const urlParams = new URLSearchParams(window.location.search);
+            const msg = urlParams.get('msg');
+            
+            // 메시지가 존재할 경우 경고창으로 표시
+            if (msg !== null && msg !== "") {
+            	if(msg == 1){
+                alert("그런 정보 없는데요...");
+            	}
+            }
+        });
+    </script>
 </body>
 
 </html>
