--- a/src/main/resources/static/css/info.css
+++ b/src/main/resources/static/css/info.css
@@ -55,3 +55,6 @@
     height: 22px;
     background: url("../img/info/btn_refresh_mtag.png") center/contain;
 }
+.current-page{
+	font-weight: bold;
+}
