--- a/src/main/resources/templates/thymeleaf/info/info.html
+++ b/src/main/resources/templates/thymeleaf/info/info.html
@@ -4,10 +4,17 @@
 <body>
 	<div th:replace="~{nav/nav::nav}"></div>
 	<div id="info" class="container-fluid mt-4 mb-3">
-		<div class="container px-0 pt-4">
+		<div class="container px-4 px-sm-5 pt-4">
 			<div class="row">
 				<div class="col-12">
-					<h3 class="text-bold">#전체</h3>
+					<h3 class="text-bold">
+						# <span th:text="${showTag}"></span>
+						<th:block th:if="${area.size == 1}">
+							<span th:text="${showArea}"></span>
+						</th:block>
+
+						<th:block th:unless="${area.size == 1}">전체</th:block>
+					</h3>
 				</div>
 			</div>
 			<!--board-->
@@ -28,10 +35,10 @@
 						<div class="row " th:each="list:${list}">
 							<a th:href="@{'Event_view?id='+ ${list.getEvent_num()}}"
 								class="row">
-								<div class="col-3 board-left">
+								<div class="col-3 board-left text-center">
 									<img th:src="@{'../img/info/' + ${list.getEvent_thumbnail()}}"
-										class="img-fluid" alt=""> <span class="text-white f12 "
-										th:text="${list.getEvent_name()}"></span>
+										class="img-fluid rounded-4" alt=""
+										style="width: 80px; height: 80px;">
 								</div>
 								<div class="col">
 									<div class="row">
@@ -43,27 +50,103 @@
 										</div>
 									</div>
 									<div class="row">
-										<div class="col-12">
+										<div class="col">
 											<button type="button"
 												class="btn rounded-pill px-3 btn-light f14"
-												th:text="${list.getEvent_area()}"></button>
+												th:text="${list.getEvent_name()}"
+												th:if="${list.getEvent_name() != null}"></button>
 											<button type="button"
 												class="btn rounded-pill px-3 btn-light f14"
-												th:text="${list.getEvent_area2()}"></button>
+												th:text="${list.getEvent_area()}"
+												th:if="${list.getEvent_area() != null}"></button>
 											<button type="button"
 												class="btn rounded-pill px-3 btn-light f14"
-												th:text="${list.getEvent_tag()}">#</button>
+												th:text="${list.getEvent_area2()}"
+												th:if="${list.getEvent_area2() != null}"></button>
+											<button type="button"
+												class="btn rounded-pill px-3 btn-light f14"
+												th:text="${list.getEvent_tag()}"
+												th:if="${list.getEvent_tag() != null}">#</button>
 										</div>
 									</div>
 								</div>
-								<div class="col-1 mb-1">
-									
-								</div>
+
 								<hr class="mt-3 ms-3">
 							</a>
 						</div>
 						<!--------->
 
+					</div>
+					<!-- 페이징 -->
+					<div class="pagination"
+						th:if="${showArea == null && showTag == null}">
+						<ul class="d-flex">
+							<!-- 이전 버튼 -->
+							<li th:if="${currentPage > 1}" class="mx-2"><a
+								th:href="@{'/info?page=' + ${mPage} + '&amp;area=' + ${showArea} + '&amp;tagss=' + ${showTag}}">&laquo;
+									이전</a></li>
+
+							<!-- 페이지 번호 -->
+							<li
+								th:each="pageNum : ${#numbers.sequence((currentPage - 4 > 0 ? currentPage - 4 : 1), 
+                        (currentPage + 4 < totalPages ? currentPage + 4 : totalPages))}"
+								class="mx-2"><a
+								th:href="@{'/info?page=' + ${pageNum} + '&amp;area=' + ${showArea} + '&amp;tagss=' + ${showTag}}"
+								th:text="${pageNum}"
+								th:class="${currentPage == pageNum} ? 'current-page' : ''"></a>
+							</li>
+
+							<!-- 다음 버튼 -->
+							<li th:if="${currentPage < totalPages}" class="mx-2"><a
+								th:href="@{'/info?page=' + ${pPage} + '&amp;area=' + ${showArea} + '&amp;tagss=' + ${showTag}}">다음
+									&raquo;</a></li>
+						</ul>
+					</div>
+					<div class="pagination" th:if="${showArea != null}">
+						<ul class="d-flex">
+							<!-- 이전 버튼 -->
+							<li th:if="${currentPage > 1}" class="mx-2"><a
+								th:href="@{'/Event_area?page=' + ${mPage} + '&amp;area=' + ${showArea} + '&amp;tagss=' + ${showTag}}">&laquo;
+									이전</a></li>
+
+							<!-- 페이지 번호 -->
+							<li
+								th:each="pageNum : ${#numbers.sequence((currentPage - 4 > 0 ? currentPage - 4 : 1), 
+                        (currentPage + 4 < totalPages ? currentPage + 4 : totalPages))}"
+								class="mx-2"><a
+								th:href="@{'/Event_area?page=' + ${pageNum} + '&amp;area=' + ${showArea} + '&amp;tagss=' + ${showTag}}"
+								th:text="${pageNum}"
+								th:class="${currentPage == pageNum} ? 'current-page' : ''"></a>
+							</li>
+
+							<!-- 다음 버튼 -->
+							<li th:if="${currentPage < totalPages}" class="mx-2"><a
+								th:href="@{'/Event_area?page=' + ${pPage} + '&amp;area=' + ${showArea} + '&amp;tagss=' + ${showTag}}">다음
+									&raquo;</a></li>
+						</ul>
+					</div>
+					<div class="pagination" th:if="${showTag != null}">
+						<ul class="d-flex">
+							<!-- 이전 버튼 -->
+							<li th:if="${currentPage > 1}" class="mx-2"><a
+								th:href="@{'/Event_tags?page=' + ${mPage} + '&amp;area=' + ${showArea} + '&amp;tagss=' + ${showTag}}">&laquo;
+									이전</a></li>
+
+							<!-- 페이지 번호 -->
+							<li
+								th:each="pageNum : ${#numbers.sequence((currentPage - 4 > 0 ? currentPage - 4 : 1), 
+                        (currentPage + 4 < totalPages ? currentPage + 4 : totalPages))}"
+								class="mx-2"><a
+								th:href="@{'/Event_tags?page=' + ${pageNum} + '&amp;area=' + ${showArea} + '&amp;tagss=' + ${showTag}}"
+								th:text="${pageNum}"
+								th:class="${currentPage == pageNum} ? 'current-page' : ''"></a>
+							</li>
+
+							<!-- 다음 버튼 -->
+							<li th:if="${currentPage < totalPages}" class="mx-2"><a
+								th:href="@{'/Event_tags?page=' + ${pPage} + '&amp;area=' + ${showArea} + '&amp;tagss=' + ${showTag}}">다음
+									&raquo;</a></li>
+						</ul>
 					</div>
 				</div>
 				<!------------우측 (필터)------------->
@@ -76,28 +159,32 @@
 							<hr>
 						</div>
 						<div class="col-12">
-						<a href="info"class="btn rounded-pill px-3 btn-secondary f14"># 전체</a>
-						<a th:href="@{'Event_area?area='+${list.getEvent_area()}}"class="btn rounded-pill px-3 btn-light f14" th:each="list:${list}">#  
-						<span th:text="${list.getEvent_area()}"></span></a>
-							
+							<a href="info" class="btn rounded-pill px-3 btn-secondary f14">#
+								전체</a> <a th:href="@{'Event_area?area='+${area}}"
+								class="btn rounded-pill px-3 btn-light f14"
+								th:each="area:${area}"># <span th:text="${area}"></span>
+							</a>
+
 						</div>
 						<div class="col-11 m-auto">
 							<hr>
 						</div>
 						<div class="col-12">
-							<a href="info"class="btn rounded-pill px-3 btn-secondary f14"># 전체 태그</a>
+							<a href="info" class="btn rounded-pill px-3 btn-secondary f14">#
+								전체 태그</a>
 							<button type="button" class="btn rounded-pill px-3 btn-light f14"
-								th:each="tag : ${tags}" >
-								<a th:href="@{'Event_tags?tagss='+${tag}}"># <span th:text="${tag}"></span></a>
+								th:each="tag : ${tags}">
+								<a th:href="@{'Event_tags?tagss='+${tag}}"># <span
+									th:text="${tag}"></span></a>
 							</button>
 						</div>
 					</div>
 				</div>
 			</div>
 			<th:block th:if="${session.Member_Id=='admin'}">
-			<div class="col-12 text-end mt-3">
-				<a th:href="@{'Event_write_content'}" class="btn btn-main"> 글쓰기</a>
-			</div>
+				<div class="col-12 text-end mt-3">
+					<a th:href="@{'Event_write_content'}" class="btn btn-main"> 글쓰기</a>
+				</div>
 			</th:block>
 		</div>
 
