--- a/src/main/resources/templates/thymeleaf/aicc/aicc.html
+++ b/src/main/resources/templates/thymeleaf/aicc/aicc.html
@@ -40,7 +40,7 @@
                     <img src="../img/aicc/cos_start_welcome.png" class="img-fluid"
                          alt="환영합니다!">
                     <p class="f22 text-shadow">
-                        <span>username</span>님! 안녕하세요.
+                        <span th:text="${session.Member_Name}">username</span>님! &nbsp;안녕하세요.
                     </p>
                     <p class="fw-bold text-shadow welcome-big">
                         AI 플래너에 <br> 오신 것을 환영합니다.
