--- a/src/main/resources/templates/thymeleaf/Member/FindPw_Result.html
+++ b/src/main/resources/templates/thymeleaf/Member/FindPw_Result.html
@@ -9,16 +9,15 @@
 	<div class="container addMember_wrap">
 		<div class="row my-5">
 			<form action="/FindPw_Result_Action" method="post">
-				<div class="col-md-8 col-lg-7 col-xl-5 mx-auto my-5 gap-2">
-					<input type="text" name="Member_Id" th:value="${param.Member_Id}"/>
+				<div class="col-md-8 col-lg-7 col-xl-6 mx-auto my-5 gap-2">
+					<input type="hidden" name="Member_Id" th:value="${param.Member_Id}"/>
 					<div
-						class="row g-3 addMember_form p-4 rounded-5 shadow-sm my-5 px-5">
-						<h3>
-							<span th:text="${param.Member_Name}" class="f15"></span>님의
-							비밀번호를 재설정 해드릴게요 !
-						</h3>
+						class="row g-3 addMember_form p-4 rounded-5 shadow-sm my-5 p-5">
+						<img src="../img/mypage/lock.png" alt="" class="img-fluid w-25 m-auto mb-2"/>
+							<span class="flex-wrap text-center h4 mb-5">
+							<span th:text="${param.Member_Name}"></span>님의 비밀번호를 재설정 해드릴게요 !</span>
 						<div class="col-12">
-							<div class="form-floating">
+							<div class="form-floating toast-body">
 								<input type="password" class="form-control" id="password"
 									placeholder="비밀번호" name="Member_Pw"> 
 									<label
