24-02-18 | 박검지 | 잘못된 경로 변경

--- a/src/main/resources/templates/thymeleaf/feed/feed_show.html
+++ b/src/main/resources/templates/thymeleaf/feed/feed_show.html
@@ -13,7 +13,7 @@
                 <h2 class="fw-bold">제목</h2>
                 <div class="row">
                     <div class="col feed-user py-2 py-lg-5 f15 d-flex align-items-center">
-                        <img src="../../static/img/feed/user_rabbit.jpg" class="rounded-circle" width="24" alt="">
+                        <img src="../img/feed/user_rabbit.jpg" class="rounded-circle" width="24" alt="">
                         <div class="gg-dim-txt">
                             <span class="ms-1">검데렐라</span>
                             <span class="ms-2">2024.02.07</span>
@@ -28,7 +28,7 @@
             <div class="col-12 order-0 order-md-1 p-0 px-md-5">
                 <!--썸네일-->
                 <div class="mt-md-5 mb-4 mx-auto px-md-5">
-                    <img src="../../static/img/feed/cebu.jpg" class="img-fluid rounded-3" alt="">
+                    <img src="../img/feed/cebu.jpg" class="img-fluid rounded-3" alt="">
                 </div>
             </div>
         </div>
@@ -74,7 +74,7 @@
         <div class="container">
             <div class="row">
                 <div class="col feed-user pb-4 f15 d-flex align-items-center">
-                    <img src="../../static/img/feed/user_rabbit.jpg" class="rounded-circle" width="64" alt="">
+                    <img src="../img/feed/user_rabbit.jpg" class="rounded-circle" width="64" alt="">
                     <div class="p-3">
                         <p class="p-0 m-0 fw-bold f20 mb-1">검데렐라</p>
                         <div class="gg-dim-txt f11">
@@ -90,14 +90,14 @@
                     <div class="row">
                         <div class="col-6">
                             <div class="feed-writer-info-img rounded mb-2">
-                                <img src="../../static/img/feed/beer.jpg" class="img-fluid" alt="">
+                                <img src="../img/feed/beer.jpg" class="img-fluid" alt="">
                             </div>
                             <span class="f12 d-block gg-dim-txt">이전피드</span>
                             <span class="f14 fw-bold">뭔가 집에 가고 싶다</span>
                         </div>
                         <div class="col-6 text-end">
                             <div class="feed-writer-info-img rounded mb-2">
-                                <img src="../../static/img/feed/beer.jpg" class="img-fluid" alt="">
+                                <img src="../img/feed/beer.jpg" class="img-fluid" alt="">
                             </div>
                             <span class="f12 d-block gg-dim-txt">다음피드</span>
                             <span class="f14 fw-bold">뭔가 집에 가고 싶다</span>
@@ -112,7 +112,7 @@
         <!--댓글 입력란-->
         <div class="row mx-auto d-flex justify-content-between align-items-center">
             <div class="col flex-grow-0 p-0 text-center">
-                <img src="../../static/img/feed/user_rabbit.jpg" class="rounded-circle" width="52" alt="">
+                <img src="../img/feed/user_rabbit.jpg" class="rounded-circle" width="52" alt="">
             </div>
             <!--todo 팀장님 등록 버튼이 지금처럼 보여야하고, col 했을 때 모바일 틀어지는 부분 수정 요청 드립니다-->
             <div class="col-2 col-md-1 order-1 flex-grow-0 p-0 text-center">
